--- a/src/assest/style/index.scss
+++ b/src/assest/style/index.scss
@@ -105,3 +105,111 @@ a {
     color: #337ab7;
     text-decoration: none;
 }
+
+div {
+    display: block;
+}
+
+/**************************** 自定义message样式 start *********************************/
+.custom-message {
+    border: 0px;
+    background-color: #fff;
+    box-shadow: 0px 9px 28px 8px rgb(0 0 0 / 5%), 0px 6px 16px 0px rgb(0 0 0 / 8%), 0px 3px 6px -4px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    font-size: 14px;
+    padding: 12px 16px;
+
+    .el-icon {
+        margin-right: 4px;
+    }
+
+    .el-message__content {
+        font-weight: 400;
+        color: #262626;
+        line-height: 22px;
+    }
+}
+/**************************** 自定义message样式 end *********************************/
+
+/**************************** 自定义confirm样式 start *********************************/
+.custom-confirm {
+    padding-bottom: 0px;
+    --el-font-size-base: 14px;
+    .el-message-box__content {
+        padding: 20px 24px;
+        min-height: 84px;
+
+        .el-message-box__container {
+            i {
+                color: #ffae0d;
+                top: 12px;
+            }
+
+            .el-message-box__message {
+                padding: 0px 0px 0px 30px;
+                font-size: 16px;
+                font-weight: 500;
+                color: #262626;
+                line-height: 24px;
+            }
+        }
+    }
+
+    .el-message-box__btns {
+        padding: 0px 24px 20px;
+
+        .el-button {
+            width: 80px;
+        }
+    }
+}
+
+/**************************** 自定义confirm样式 end *********************************/
+
+/**************************** 自定义dialog样式 start *********************************/
+.custom-dialog {
+    --el-font-size-base: 14px;
+    .el-dialog__header {
+        border-bottom: 1px solid #eeeeee;
+        padding: 16px 24px;
+        margin-right: 0px;
+
+        .el-dialog__title {
+            font-size: 16px;
+            font-weight: 500;
+            color: #262626;
+            line-height: 24px;
+            display: inline-block;
+        }
+
+        .el-dialog__headerbtn {
+            top: 1px;
+            right: 5px;
+        }
+    }
+
+    .el-dialog__footer {
+        border-top: 1px solid #eeeeee;
+        padding: 12px 24px;
+        .el-button {
+            width: 80px;
+        }
+    }
+}
+/**************************** 自定义dialog样式 end *********************************/
+
+/**************************** 自定义message prompt样式 start *********************************/
+.custom-message-prompt {
+    --el-font-size-base: 14px;
+
+    .el-message-box__content {
+        padding: 24px 24px 10px;
+    }
+
+    .el-message-box__btns {
+        .el-button {
+            width: 80px;
+        }
+    }
+}
+/**************************** 自定义message prompt样式 end *********************************/
