--- a/src/assest/style/index.scss
+++ b/src/assest/style/index.scss
@@ -1,215 +1,3 @@
-/* 改变主题色变量 */
-@forward "element-plus/theme-chalk/src/common/var.scss" with (
-    $colors: (
-        "primary": (
-            "base": #00b85c
-        ),
-        "success": (
-            "base": #00b85c
-        ),
-        "warning": (
-            "base": #e6a23c
-        ),
-        "danger": (
-            "base": #e63948
-        )
-    ),
-    $text-color: (
-        "disabled": #00b85c
-    ),
-    $border-color: (
-        "": #ebebeb
-    ),
-    $border-radius: (
-        "base": 2px
-    ),
-    $font-size: (
-        "base": 12px
-    )
-);
+@use "./global" as *;
+@use "./element" as *;
 
-// 如果你想导入所有样式:
-@use "element-plus/theme-chalk/src/index.scss" as *;
-
-html,
-body {
-    overflow: auto;
-}
-
-html,
-body,
-#app {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-}
-
-body {
-    font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
-    margin: 0;
-    font-size: 14px;
-    color: #333333;
-}
-
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    outline: none;
-    scrollbar-color: #ddd #fafafa;
-    scrollbar-track-color: #fafafa;
-    scrollbar-width: thin;
-}
-
-/*滚动条整体样式*/
-::-webkit-scrollbar {
-    width: 6px; /*竖向滚动条的宽度*/
-    height: 6px; /*横向滚动条的高度*/
-}
-::-webkit-scrollbar-thumb {
-    /*滚动条里面的小方块*/
-    background: #ddd;
-    border-radius: 5px;
-}
-::-webkit-scrollbar-track {
-    /*滚动条轨道的样式*/
-    background: #fafafa;
-    border-radius: 5px;
-}
-
-[v-cloak] {
-    display: block;
-}
-
-img {
-    max-width: 100%;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-.hidden {
-    display: none;
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-a {
-    color: #337ab7;
-    text-decoration: none;
-}
-
-div {
-    display: block;
-}
-
-/**************************** 自定义message样式 start *********************************/
-.custom-message {
-    border: 0px;
-    background-color: #fff;
-    box-shadow: 0px 9px 28px 8px rgb(0 0 0 / 5%), 0px 6px 16px 0px rgb(0 0 0 / 8%), 0px 3px 6px -4px rgb(0 0 0 / 12%);
-    border-radius: 4px;
-    font-size: 14px;
-    padding: 12px 16px;
-
-    .el-icon {
-        margin-right: 4px;
-    }
-
-    .el-message__content {
-        font-weight: 400;
-        color: #262626;
-        line-height: 22px;
-    }
-}
-/**************************** 自定义message样式 end *********************************/
-
-/**************************** 自定义confirm样式 start *********************************/
-.custom-confirm {
-    padding-bottom: 0px;
-    --el-font-size-base: 14px;
-    .el-message-box__content {
-        padding: 20px 24px;
-        min-height: 84px;
-
-        .el-message-box__container {
-            i {
-                color: #ffae0d;
-                top: 12px;
-            }
-
-            .el-message-box__message {
-                padding: 0px 0px 0px 30px;
-                font-size: 16px;
-                font-weight: 500;
-                color: #262626;
-                line-height: 24px;
-            }
-        }
-    }
-
-    .el-message-box__btns {
-        padding: 0px 24px 20px;
-
-        .el-button {
-            width: 80px;
-        }
-    }
-}
-
-/**************************** 自定义confirm样式 end *********************************/
-
-/**************************** 自定义dialog样式 start *********************************/
-.custom-dialog {
-    --el-font-size-base: 14px;
-    .el-dialog__header {
-        border-bottom: 1px solid #eeeeee;
-        padding: 16px 24px;
-        margin-right: 0px;
-
-        .el-dialog__title {
-            font-size: 16px;
-            font-weight: 500;
-            color: #262626;
-            line-height: 24px;
-            display: inline-block;
-        }
-
-        .el-dialog__headerbtn {
-            top: 1px;
-            right: 5px;
-        }
-    }
-
-    .el-dialog__footer {
-        border-top: 1px solid #eeeeee;
-        padding: 12px 24px;
-        .el-button {
-            width: 80px;
-        }
-    }
-}
-/**************************** 自定义dialog样式 end *********************************/
-
-/**************************** 自定义message prompt样式 start *********************************/
-.custom-message-prompt {
-    --el-font-size-base: 14px;
-
-    .el-message-box__content {
-        padding: 24px 24px 10px;
-    }
-
-    .el-message-box__btns {
-        .el-button {
-            width: 80px;
-        }
-    }
-}
-/**************************** 自定义message prompt样式 end *********************************/
