--- a/src/assest/style/global.scss
+++ b/src/assest/style/global.scss
@@ -130,7 +130,6 @@ div {
         }
     }
 }
-
 /**************************** 自定义confirm样式 end *********************************/
 
 /**************************** 自定义dialog样式 start *********************************/
@@ -169,7 +168,7 @@ div {
             box-shadow: 0px -1px 0px 0px #f5f5f5, 0px 1px 30px 0px rgba(0, 21, 41, 0.12);
 
             .el-button {
-                width: 80px;
+                min-width: 80px;
             }
         }
     }
